--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "camera-controls": "^1.14.1",
     "dat.gui": "^0.7.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
